# SenseCAP-Watcher-Firmware

./: .gitignore  .gitmodules  AGENTS.md  README.md
components/esp_lvgl_port/: idf_component.yml
components/sensecap-watcher/: CMakeLists.txt  sensecap-watcher.c
components/sensecap-watcher/include/: sensecap-watcher.h
examples/: README.md
examples/battery_standby_test/: CMakeLists.txt  sdkconfig.defaults
firmware_custom/recorder_mvp/: .gitignore  CMakeLists.txt  sdkconfig.defaults
firmware_custom/recorder_mvp/main/: CMakeLists.txt  app_main.c  idf_component.yml  rec_audio.c  rec_audio.h  rec_input.c  rec_input.h  rec_led.c  rec_led.h  rec_power.c  rec_power.h  rec_state.h  rec_storage.c  rec_storage.h  rec_ui.c  rec_ui.h
firmware_custom/standby_battery_minimal/: CMakeLists.txt  README.md  STANDBY_BASELINE.md  sdkconfig.defaults
firmware_custom/standby_battery_minimal/main/: CMakeLists.txt  app_main.c
infra/sync_server/: .env.example  Caddyfile  Dockerfile  README.md  docker-compose.yml
infra/sync_server/app/: server.py
infra/sync_server/windows/: Caddyfile  README.md  start_sync_stack.ps1  watcher_sync_server.ps1
watcher_devkit_baseline/: 01_device_fact_sheet.md  02_flash_partition_recovery_baseline.md  03_bsp_minimum_contract.md  04_dependency_floor_and_fallback.md  05_bringup_checklist.md  06_compatibility_log.md  07_display_supplier_pin_compat_template.md  README.md
watcher_reference/docs/: README.md
watcher_reference/docs/hardware_modules/: 01_power_io_expander.md  06_ai_sscma_spi2.md  (+8 more)
watcher_reference/use_cases/: LARGE_ASSETS_REFERENCE.md
(+29 files in other folders)
